force-app/main/default/objects/Lead_Course_Association__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Associated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>Course_Master__r.Course_Code__c</formula>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <formula>Course_Master__r.Latest_Course_Version_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Master__c</fullName>
        <description>Course Master of the Lead interest. This holds the latest version of the Course</description>
        <label>Course Master</label>
        <referenceTo>Course_Master__c</referenceTo>
        <relationshipLabel>Lead Courses Association</relationshipLabel>
        <relationshipName>Lead_Courses_Association</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsLatestCourseAssociation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>tells whether this LCA is part of the latest batch of LCAs for this lead. Will be ticked to true if the LCA&apos;s Associated Date is within the time interval set in LCA Grouping Interval custom setting from Lead&apos;s Last Course Associated Date</description>
        <label>Is Latest Course Association</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Associated_Rank__c</fullName>
        <description>Last Associated Rank</description>
        <label>Last Associated Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Courses Association</relationshipLabel>
        <relationshipName>Lead_Courses_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isLatestPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is the latest primary course that was set for all the batches of Lead Course Association created</description>
        <label>Is Latest Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Course Association</label>
    <nameField>
        <displayFormat>LCA-{0000}</displayFormat>
        <label>Lead Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Courses Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>